--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,6 @@
 body {
 	background-color: black !important;
-	background-image: url("images/header.jpg");
+	background-image: url("../images/header.jpg");
 	background-size: 50%, 100%;
 	background-repeat: no-repeat;
 }
