--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,9 @@
 body {
 	background-color: black !important;
+}
+
+.root {
+	size: 100%, 100%;
 	background-image: url("../images/header.jpg");
 	background-size: 50%, 100%;
 	background-repeat: no-repeat;
