--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,8 @@ body {
 }
 
 .root {
-	size: 100%, 100%;
+	width: 500;
+	height: 500;
 	background-image: url("../images/header.jpg");
 	background-size: 50%, 100%;
 	background-repeat: no-repeat;
