--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36,6 +36,7 @@ body {
   opacity: 0;
   animation-name: topFadeOut;
   animation-duration: 5s;
+  animation-fill-mode: forwards;
   color: white;
 	
 }
