--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,43 +2,14 @@ body {
 	background-color: black !important;
 }
 
-.animation {
-  width: 75%;
-  height: 27.5rem;  
-  margin: 0 auto;
-  overflow: hidden;
-  position: relative;
+@keyframes fadeIn {
+	from {opacity: 0}
+	to {opacity: 1}
 }
 
-.animation-container {
-  width: 1000rem;
-  height: 30rem;
-}
-
-@keyframes topFadeOut {
-  0% {
-    position: absolute;
-    top: -3rem;
-    opacity: 0;
-  }
-
-  75% {
-    position: absolute;
-    top: 25%;
-    opacity: 1;
-  }
-}
-
-.fade-in-text {
-  font-size: 4.4rem;
-  left: 2.5rem;
-  top: 5rem;
-  opacity: 0;
-  animation-name: topFadeOut;
-  animation-duration: 5s;
-  animation-fill-mode: forwards;
-  color: white;
-	
+.fade-in {
+	opacity: 0
+	animation: fadeIn 2s fowards;
 }
 
 #navbar {
