--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,8 +9,8 @@ body {
 
 .fade-in {
 	opacity: 0;
-	animation: fadeIn 2s ease-in;
-	color: white !important
+	animation: fadeIn 2s ease-in forwards;
+	color: lightgray !important
 }
 
 #navbar {
