--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,7 +10,8 @@ body {
 .fade-in {
 	opacity: 0;
 	animation: fadeIn 2s ease-in forwards;
-	color: lightgray !important
+	color: lightgray !important;
+	text-align: center;
 }
 
 #navbar {
