--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,6 +12,7 @@ body {
 	animation: fadeIn 2s ease-in forwards;
 	color: lightgray !important;
 	text-align: center;
+	position: absolute;
 }
 
 #navbar {
