--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,8 @@ body {
 	color: lightgray !important;
 	text-align: center;
 	position: absolute;
+	background-image: "../images/header.jpg";
+	background-size: 50%, 100%;
 }
 
 #navbar {
