--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,7 +13,8 @@ body {
 	color: lightgray !important;
 	text-align: center;
 	position: absolute;
-	background-image: "../images/header.jpg";
+	background-image: url("../images/header.jpg");
+	background-repeat: no-repeat;
 	background-size: 50%, 100%;
 }
 
