--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,15 +7,18 @@ body {
 	to {opacity: 1}
 }
 
+.root {
+	background-image: url("../images/header.jpg");
+	background-repeat: no-repeat;
+	background-size: 50%, 100%;
+}
+
 .fade-in {
 	opacity: 0;
 	animation: fadeIn 2s ease-in forwards;
 	color: lightgray !important;
 	text-align: center;
 	position: absolute;
-	background-image: url("../images/header.jpg");
-	background-repeat: no-repeat;
-	background-size: 50%, 100%;
 }
 
 #navbar {
