--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,6 +11,8 @@ body {
 	background-image: url("../images/header.jpg");
 	background-repeat: no-repeat;
 	background-size: 50%, 100%;
+	height: 100%;
+	width: 100%;
 }
 
 .fade-in {
