--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,7 @@ body {
 	background-size: 50%, 100%;
 	height: 100%;
 	width: 100%;
+	position: relative;
 }
 
 .fade-in {
@@ -20,7 +21,6 @@ body {
 	animation: fadeIn 2s ease-in forwards;
 	color: lightgray !important;
 	text-align: center;
-	position: absolute;
 }
 
 #navbar {
