--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,6 +7,11 @@ body {
 	to {opacity: 1}
 }
 
+.root {
+	position: relative;
+	margin-top: 20px;
+}
+
 .fade-in {
 	opacity: 0;
 	animation: fadeIn 2s ease-in forwards;
