--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,6 +14,12 @@ body {
 	text-align: center;
 }
 
+.container {
+	background-image: url("../public/images/header.jpg");
+ 	background-size: 50%, 100%;
+ 	background-repeat: no-repeat;
+}
+
 #navbar {
 	position: fixed;
 	width: 100%;
