--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,10 +14,12 @@ body {
 	text-align: center;
 }
 
-.container {
+.img {
 	background-image: url("../public/images/header.jpg");
  	background-size: 50%, 100%;
  	background-repeat: no-repeat;
+ 	width: 100%;
+ 	height: 100%;
 }
 
 #navbar {
