--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,9 @@
 body {
-	background-color: black !important;
+	background: #45484d !important; /* Old browsers */ 
+	background: -moz-linear-gradient(-45deg, #45484d 0%, #000000 100%) !important; /* FF3.6-15 */
+	background: -webkit-linear-gradient(-45deg, #45484d 0%,#000000 100%) !important; /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(135deg, #45484d 0%,#000000 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=1 );
 }
 
 @keyframes fadeIn {
@@ -12,14 +16,6 @@ body {
 	animation: fadeIn 2s ease-in forwards;
 	color: lightgray !important;
 	text-align: center;
-}
-
-.img {
-	background-image: url("../public/images/header.jpg");
- 	background-size: 50%, 100%;
- 	background-repeat: no-repeat;
- 	width: 100%;
- 	height: 100%;
 }
 
 #navbar {
