--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,21 +1,5 @@
 body {
-	background: #45484d !important; /* Old browsers */ 
-	background: -moz-linear-gradient(-45deg, #45484d 0%, #000000 100%) !important; /* FF3.6-15 */
-	background: -webkit-linear-gradient(-45deg, #45484d 0%,#000000 100%) !important; /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(135deg, #45484d 0%,#000000 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=1 );
-}
-
-@keyframes fadeIn {
-	from {opacity: 0}
-	to {opacity: 1}
-}
-
-.fade-in {
-	opacity: 0;
-	animation: fadeIn 2s ease-in forwards;
-	color: lightgray !important;
-	text-align: center;
+	background-color: black !important;
 }
 
 #navbar {
